# pyesom

./: .gitignore  CITATIONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-paper.yml
notebooks/: 01_esom_basics.ipynb  02_ustar_clustering.ipynb  04_paper_reproduction.ipynb  05_understanding_agent_swarm.ipynb  06_showcasting_agent_swarm.ipynb  dbs.jl  lsun.csv
pyesom/: __init__.py
pyesom/clustering/: __init__.py  dbs.py  ustar_flood.py  ustar_watershed.py
pyesom/projection/: __init__.py  esom.py  intrasom_backend.py  lattice.py  minisom_backend.py  pswarm.py  sompy_backend.py  torchsom_backend.py
pyesom/topology/: __init__.py  pmatrix.py  umatrix.py  ustar.py
pyesom/visualization/: __init__.py  cluster.py  component.py  heatmap.py  topographic.py
scripts/: export_fcps_npz.py  fcps_npz_io.py  run_fcps_benchmark.py
tests/: conftest.py  test_esom_backend.py  test_esom_intrasom.py  test_esom_sompy.py  test_fcps_benchmarks.py  test_hkv_csv.py  test_pmatrix.py  test_somlattice.py  test_umatrix.py  test_ustar.py  test_ustar_flood.py
tests/fixtures/: README.md  fcps.npz
toposwarm/: Manifest.toml  Project.toml  README.md  toposwarm.cast
toposwarm/notebooks/: 05_understanding_agent_swarm.ipynb  06_showcasting_agent_swarm.ipynb  07_fcps_evaluation.ipynb
toposwarm/paper/: references.bib  toposwarm.qmd
toposwarm/scripts/: run_pswarm.jl  run_pswarm_live.jl
toposwarm/src/: TopoSwarm.jl
tuning/: analyze_altair.py  experiment.py  harness.py  search.py
tuning/results/: README.md  intrasom_atom.tsv  intrasom_chainlink.tsv  intrasom_lsun.tsv  (+21 more)
