[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyesom"
version = "0.1.0"
description = "Emergent SOM pipeline: topology (U*, P*, flood clustering) in Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Mattijn van Hoek"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "minisom>=2.3",
    "altair>=5.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
fast = ["numba>=0.57"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "jupyter>=1.0"]
export-fcps = ["rdata>=0.9"]
bench = ["scikit-learn>=1.3"]
# Batch SOMPY trainer (GitHub; PyPI wheel often breaks imports). Also: scikit-learn, joblib (sompy deps).
sompy = [
    "sompy @ git+https://github.com/sevamoo/SOMPY.git",
    "scikit-learn>=1.3",
]
# PyTorch batch trainer ([torchsom](https://pypi.org/project/torchsom/) — Michelin TorchSOM API).
torchsom = [
    "torch>=2.0",
    "torchsom>=1.0.0",
]
# IntraSOM batch trainer — toroidal + hexagonal grid support.
intrasom = ["intrasom>=1.0"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]
addopts = "-q"
